--- a/trunk/x360ce.App/Documents/ChangeLog.txt
+++ b/trunk/x360ce.App/Documents/ChangeLog.txt
@@ -1,4 +1,7 @@
-﻿v2.1.3.203 (2014-11-01)
+﻿v3.0.1.0 (2015-04-14)
+- Update: A lot of changes, fixes and new bugs.
+
+v2.1.3.203 (2014-11-01)
 - Update: DeadZone, Anti-DeadZone and Sensitivity feature complete.
 - Update: Updated to xinput1_3.dll v3.4.0.956.
 
