The beginnings of auto tooltip support.

--- a/x360ce.App/MainForm.resx
+++ b/x360ce.App/MainForm.resx
@@ -125,74 +125,74 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAA
-        EQAAAk1TRnQBSQFMAgEBBQEAARgBAAEYAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/ACEAARoBXwFyAf8BIwFqAYIB/wEmAXEBiQH/ASUBbwGIAf8BJQFv
-        AYgB/wElAW8BiAH/ASUBbwGIAf8BJgFxAYkB/wEjAWoBggH/ARoBYAFzAf/YAAEeAWUBegH/AXgB5wL/
-        AYYB7wL/AYUB7gL/AYUB7gL/AYUB7gL/AYUB7gL/AYYB7wL/AXcB6AL/AR4BZQF6Af/YAAEdAWQBeQH/
-        AWsB5wH+Af8BdAHqAfwB/wFzAekB+wH/AXMB6QH7Af8BcwHpAfsB/wFzAekB+wH/AXQB6gH8Af8BawHn
-        Af4B/wEdAWQBeQH/2AABGQFdAXAB/wFbAc4B5gH/AV8B0AHiAf8BXgHPAeIB/wFeAc8B4gH/AV4BzwHi
-        Af8BXgHPAeIB/wFfAdAB4gH/AVoBzwHmAf8BFwFdAXAB/9gAARIBVQFpAf8BSAG4AdEB/wFJAbgBzgH/
-        AUkBtwHNAf8BSQG3Ac0B/wFJAbcBzQH/AUkBtwHNAf8BSQG4Ac4B/wFIAbgB0QH/ARIBVQFpAf/YAAEO
-        AU8BYQH/ATgBogG6Af8BNQGeAbYB/wExAZ0BtAH/ATEBnQG0Af8BMQGdAbQB/wExAZ0BtAH/ATUBngG2
-        Af8BOAGiAboB/wEOAU8BYQH/2AABCAFGAVgB/wFQAaIBtgH/AVgBpAG2Af8BVwGiAbUB/wFVAaIBtQH/
-        AVUBogG1Af8BVwGiAbUB/wFYAaQBtgH/AVABogG2Af8BBwFIAVoB/9kAAT4BUAH/AWwBqAG4Af8BggGy
-        Ab8B/wGAAbABvgH/AYABsAG+Af8BgAGwAb4B/wGAAbABvgH/AYIBsgG/Af8BbAGoAbgB/wEAAT8BUQH/
-        2QABNwFHAf8BbAGiAbAB/wGQAbYBwQH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AY4BtAG/Af8BkAG2
-        AcEB/wFsAaIBsAH/AQABNgFGAf/ZAAEyAUEB/wEAATMBQgH/AQABMwFCAf8BAAEzAUIB/wEAATMBQgH/
-        AQABMwFCAf8BAAEzAUIB/wEAATMBQgH/AQABMwFCAf8BAAEzAUIB//8A/wD/AP8A/wD/AN4AAWIBQwEU
-        Af8BcQFLARkB/wF3AVABGwH/AXcBTwEbAf8BdwFPARsB/wF3AU8BGwH/AXcBTwEbAf8BdwFQARsB/wFx
-        AUsBGQH/AWMBQwEUAf8YAAEYAWABLAH/AR0BbwEzAf8BHwF0ATUB/wEeAXQBNQH/AR4BdAE1Af8BHgF0
-        ATUB/wEeAXQBNQH/AR8BdAE1Af8BHQFvATMB/wEYAWEBLAH/GAABVAFOAUUB/wFdAVYBTQH/AWMBXAFS
-        Af8BYwFcAVIB/wFjAVwBUgH/AWMBXAFSAf8BYwFcAVIB/wFjAVwBUgH/AV0BVgFNAf8BVAFOAUUB/xgA
-        AhoBcgH/ASQBIwGCAf8CJgGJAf8BJgElAYgB/wEmASUBiAH/ASYBJQGIAf8BJgElAYgB/wImAYkB/wEk
-        ASMBggH/AhoBcwH/GAABagFHARcC/wHCAWAC/wHKAXEB/wH+AckBcAH/Af4ByQFwAf8B/gHJAXAB/wH+
-        AckBcAL/AcoBcQL/AcEBYAH/AWsBRwEXAf8YAAEbAWgBLwH/AWMB/wGaAf8BcAH/AasB/wFuAf8BqgH/
-        AW4B/wGqAf8BbgH/AaoB/wFuAf8BqgH/AXAB/wGrAf8BYwH/AZoB/wEbAWgBMQH/GAABWQFTAUoB/wHb
+        EQAAAk1TRnQBSQFMAgEBBQEAASABAAEgAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8A/wD/ACEAARkBXgFxAf8BIgFpAYIB/wElAXABiQH/ASQBbgGIAf8BJAFu
+        AYgB/wEkAW4BiAH/ASQBbgGIAf8BJQFwAYkB/wEiAWkBggH/ARkBXwFyAf/YAAEdAWQBeQH/AXcB5wL/
+        AYYB7wL/AYUB7gL/AYUB7gL/AYUB7gL/AYUB7gL/AYYB7wL/AXYB6AL/AR0BZAF5Af/YAAEcAWMBeAH/
+        AWoB5wH+Af8BcwHqAfwB/wFyAekB+wH/AXIB6QH7Af8BcgHpAfsB/wFyAekB+wH/AXMB6gH8Af8BagHn
+        Af4B/wEcAWMBeAH/2AABGAFcAW8B/wFaAc4B5gH/AV4B0AHiAf8BXQHPAeIB/wFdAc8B4gH/AV0BzwHi
+        Af8BXQHPAeIB/wFeAdAB4gH/AVkBzwHmAf8BFgFcAW8B/9gAAREBVAFoAf8BRwG4AdEB/wFIAbgBzgH/
+        AUgBtwHNAf8BSAG3Ac0B/wFIAbcBzQH/AUgBtwHNAf8BSAG4Ac4B/wFHAbgB0QH/AREBVAFoAf/YAAEN
+        AU4BYAH/ATcBogG6Af8BNAGeAbYB/wEwAZ0BtAH/ATABnQG0Af8BMAGdAbQB/wEwAZ0BtAH/ATQBngG2
+        Af8BNwGiAboB/wENAU4BYAH/2AABBwFFAVcB/wFPAaIBtgH/AVcBpAG2Af8BVgGiAbUB/wFUAaIBtQH/
+        AVQBogG1Af8BVgGiAbUB/wFXAaQBtgH/AU8BogG2Af8BBgFHAVkB/9kAAT0BTwH/AWsBqAG4Af8BggGy
+        Ab8B/wGAAbABvgH/AYABsAG+Af8BgAGwAb4B/wGAAbABvgH/AYIBsgG/Af8BawGoAbgB/wEAAT4BUAH/
+        2QABNgFGAf8BawGiAbAB/wGQAbYBwQH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AY4BtAG/Af8BkAG2
+        AcEB/wFrAaIBsAH/AQABNQFFAf/ZAAExAUAB/wEAATIBQQH/AQABMgFBAf8BAAEyAUEB/wEAATIBQQH/
+        AQABMgFBAf8BAAEyAUEB/wEAATIBQQH/AQABMgFBAf8BAAEyAUEB//8A/wD/AP8A/wD/AN4AAWEBQgET
+        Af8BcAFKARgB/wF2AU8BGgH/AXYBTgEaAf8BdgFOARoB/wF2AU4BGgH/AXYBTgEaAf8BdgFPARoB/wFw
+        AUoBGAH/AWIBQgETAf8YAAEXAV8BKwH/ARwBbgEyAf8BHgFzATQB/wEdAXMBNAH/AR0BcwE0Af8BHQFz
+        ATQB/wEdAXMBNAH/AR4BcwE0Af8BHAFuATIB/wEXAWABKwH/GAABUwFNAUQB/wFcAVUBTAH/AWIBWwFR
+        Af8BYgFbAVEB/wFiAVsBUQH/AWIBWwFRAf8BYgFbAVEB/wFiAVsBUQH/AVwBVQFMAf8BUwFNAUQB/xgA
+        AhkBcQH/ASMBIgGCAf8CJQGJAf8BJQEkAYgB/wElASQBiAH/ASUBJAGIAf8BJQEkAYgB/wIlAYkB/wEj
+        ASIBggH/AhkBcgH/GAABaQFGARYC/wHCAV8C/wHKAXAB/wH+AckBbwH/Af4ByQFvAf8B/gHJAW8B/wH+
+        AckBbwL/AcoBcAL/AcEBXwH/AWoBRgEWAf8YAAEaAWcBLgH/AWIB/wGaAf8BbwH/AasB/wFtAf8BqgH/
+        AW0B/wGqAf8BbQH/AaoB/wFtAf8BqgH/AW8B/wGrAf8BYgH/AZoB/wEaAWcBMAH/GAABWAFSAUkB/wHb
         Ac8BtgH/AeEB1gG7Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHhAdYBuwH/AdsBzgG2
-        Af8BWQFSAUkB/xgAAR8BHgF6Af8BeAGAAv8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGR
-        Av8BdwGAAv8BHwEeAXoB/xgAAWkBRgEXAf8B7wGxAVsB/wHtAbgBaQH/AewBtwFoAf8B7AG3AWgB/wHs
-        AbcBaAH/AewBtwFoAf8B7QG4AWkB/wHvAbEBWwH/AWkBRQEXAf8YAAEZAWYBLgH/AVsB6QGRAf8BZgHm
-        AZwB/wFlAeUBmwH/AWUB5QGbAf8BZQHlAZsB/wFlAeUBmwH/AWYB5gGcAf8BWwHpAZEB/wEZAWYBLgH/
-        GAABWAFSAUkB/wHJAb0BqAH/Ac0BwgGrAf8BzAHAAaoB/wHMAcABqgH/AcwBwAGqAf8BzAHAAaoB/wHN
-        AcIBqwH/AckBvQGoAf8BWAFSAUkB/xgAAR4BHQF5Af8BawF0Af4B/wF0AYIB/AH/AXMBgQH7Af8BcwGB
-        AfsB/wFzAYEB+wH/AXMBgQH7Af8BdAGCAfwB/wFrAXQB/gH/AR4BHQF5Af8YAAFgAT8BFAH/AdQBnQFP
-        Af8B0QGgAVcB/wHRAZ8BVQH/AdEBnwFVAf8B0QGfAVUB/wHRAZ8BVQH/AdEBoAFXAf8B1AGdAU8B/wFg
-        AT8BEgH/GAABFwFdASgB/wFOAdEBewH/AVQBzwGEAf8BUwHOAYMB/wFTAc4BgwH/AVMBzgGDAf8BUwHO
-        AYMB/wFUAc8BhAH/AU4B0QF7Af8BFwFdASgB/xgAAVIBTAFDAf8BtQGsAZcB/wG1Aa0BmQH/AbUBrAGY
-        Af8BtQGsAZgB/wG1AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1AawBlwH/AVIBSwFDAf8YAAIZAXAB/wFb
-        AWEB5gH/AV8BaQHiAf8BXgFnAeIB/wFeAWcB4gH/AV4BZwHiAf8BXgFnAeIB/wFfAWkB4gH/AVoBYQHm
-        Af8CFwFwAf8YAAFXATgBEAH/AbsBhwE+Af8BugGHAUEB/wG5AYcBQQH/AbkBhwFBAf8BuQGHAUEB/wG5
-        AYcBQQH/AboBhwFBAf8BuwGHAT4B/wFXATgBEAH/GAABEwFVASYB/wE+AbcBaAH/AUEBtAFqAf8BQQG0
-        AWoB/wFBAbQBagH/AUEBtAFqAf8BQQG0AWoB/wFBAbQBagH/AT4BtwFoAf8BEwFVASYB/xgAAUwBRQE+
+        Af8BWAFRAUgB/xgAAR4BHQF5Af8BdwGAAv8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGR
+        Av8BdgGAAv8BHgEdAXkB/xgAAWgBRQEWAf8B7wGxAVoB/wHtAbgBaAH/AewBtwFnAf8B7AG3AWcB/wHs
+        AbcBZwH/AewBtwFnAf8B7QG4AWgB/wHvAbEBWgH/AWgBRAEWAf8YAAEYAWUBLQH/AVoB6QGRAf8BZQHm
+        AZwB/wFkAeUBmwH/AWQB5QGbAf8BZAHlAZsB/wFkAeUBmwH/AWUB5gGcAf8BWgHpAZEB/wEYAWUBLQH/
+        GAABVwFRAUgB/wHJAb0BqAH/Ac0BwgGrAf8BzAHAAaoB/wHMAcABqgH/AcwBwAGqAf8BzAHAAaoB/wHN
+        AcIBqwH/AckBvQGoAf8BVwFRAUgB/xgAAR0BHAF4Af8BagFzAf4B/wFzAYIB/AH/AXIBgQH7Af8BcgGB
+        AfsB/wFyAYEB+wH/AXIBgQH7Af8BcwGCAfwB/wFqAXMB/gH/AR0BHAF4Af8YAAFfAT4BEwH/AdQBnQFO
+        Af8B0QGgAVYB/wHRAZ8BVAH/AdEBnwFUAf8B0QGfAVQB/wHRAZ8BVAH/AdEBoAFWAf8B1AGdAU4B/wFf
+        AT4BEQH/GAABFgFcAScB/wFNAdEBegH/AVMBzwGEAf8BUgHOAYMB/wFSAc4BgwH/AVIBzgGDAf8BUgHO
+        AYMB/wFTAc8BhAH/AU0B0QF6Af8BFgFcAScB/xgAAVEBSwFCAf8BtQGsAZcB/wG1Aa0BmQH/AbUBrAGY
+        Af8BtQGsAZgB/wG1AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1AawBlwH/AVEBSgFCAf8YAAIYAW8B/wFa
+        AWAB5gH/AV4BaAHiAf8BXQFmAeIB/wFdAWYB4gH/AV0BZgHiAf8BXQFmAeIB/wFeAWgB4gH/AVkBYAHm
+        Af8CFgFvAf8YAAFWATcBDwH/AbsBhwE9Af8BugGHAUAB/wG5AYcBQAH/AbkBhwFAAf8BuQGHAUAB/wG5
+        AYcBQAH/AboBhwFAAf8BuwGHAT0B/wFWATcBDwH/GAABEgFUASUB/wE9AbcBZwH/AUABtAFpAf8BQAG0
+        AWkB/wFAAbQBaQH/AUABtAFpAf8BQAG0AWkB/wFAAbQBaQH/AT0BtwFnAf8BEgFUASUB/xgAAUsBRAE9
         Af8BoQGXAYYB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGh
-        AZcBhgH/AUwBRQE+Af8YAAETARIBaQH/AUgBTAHRAf8BSQFPAc4B/wFJAU8BzQH/AUkBTwHNAf8BSQFP
-        Ac0B/wFJAU8BzQH/AUkBTwHOAf8BSAFMAdEB/wETARIBaQH/GAABTgEyAQ0B/wGiAXIBMgH/AZ8BbwEw
-        Af8BmwFsAS0B/wGbAWwBLQH/AZsBbAEtAf8BmwFsAS0B/wGfAW8BMAH/AaIBcgEyAf8BTgEyAQ0B/xgA
-        ARABTAEhAf8BMwGfAVcB/wExAZsBVQH/AS4BmQFSAf8BLgGZAVIB/wEuAZkBUgH/AS4BmQFSAf8BMQGb
-        AVUB/wEzAZ8BVwH/ARABTAEhAf8YAAFFAT8BOAH/AY0BhAF0Af8BigGBAXEB/wGHAXsBbgH/AYcBewFu
-        Af8BhwF7AW4B/wGHAXsBbgH/AYoBgQFxAf8BjQGEAXQB/wFFAT8BOAH/GAACDgFhAf8BOAE8AboB/wE1
-        ATkBtgH/ATEBNgG0Af8BMQE2AbQB/wExATYBtAH/ATEBNgG0Af8BNQE5AbYB/wE4ATwBugH/Ag4BYQH/
-        GAABRQEqAQkB/wGfAXoBTgH/AaEBhAFXAf8BoAGCAVUB/wGfAYEBVAH/AZ8BgQFUAf8BoAGCAVUB/wGh
-        AYQBVwH/AZ8BegFOAf8BRQEsAQkB/xgAAQoBQwEaAf8BUAGdAWcB/wFZAZ8BbwH/AVcBngFtAf8BVQGd
-        AWwB/wFVAZ0BbAH/AVcBngFtAf8BWQGfAW8B/wFQAZ0BZwH/AQoBQwEaAf8YAAE+ATkBMwH/AZQBjgGD
-        Af8BlwGRAYkB/wGWAZABhwH/AZUBjwGGAf8BlQGPAYYB/wGWAZABhwH/AZcBkQGJAf8BlAGOAYMB/wE+
-        ATkBMwH/GAACCAFYAf8BUAFRAbYB/wFYAVoBtgH/AVcBWAG1Af8BVQFWAbUB/wFVAVYBtQH/AVcBWAG1
-        Af8BWAFaAbYB/wFQAVEBtgH/AgcBWgH/GAABOwEjAQIB/wGlAY4BbwH/Aa4BmgGEAf8BrQGaAYIB/wGt
-        AZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGuAZoBhAH/AaUBjgFvAf8BOwEiAQQB/xgAAQUBOQETAf8BbwGk
-        AYEB/wGFAa0BkAH/AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYMBrAGPAf8BhQGtAZAB/wFwAaQBgQH/
-        AQUBOgETAf8YAAE3ATEBLAH/AaABmwGVAf8BqgGmAaIB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaEB/wGq
-        AaYBoQH/AaoBpgGiAf8BoAGbAZUB/wE3ATEBLAH/GgABUAH/AmwBuAH/AoIBvwH/AoABvgH/AoABvgH/
-        AoABvgH/AoABvgH/AoIBvwH/AmwBuAH/AgABUQH/GAABLwEbAQAB/wGcAYsBcgH/AbABpQGUAf8BrwGj
-        AZIB/wGvAaMBkgH/Aa8BowGSAf8BrwGjAZIB/wGwAaUBlAH/AZwBigFyAf8BMAEcAQAB/xkAAS4BDQH/
-        AXMBmwGAAf8BlQGxAZ0B/wGTAa8BmwH/AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZUBsQGdAf8BcQGb
-        AYAB/wEAAS8BDQH/GAABLQEpASUB/wGbAZcBkwH/AbEBrwGsAf8BrwGtAaoB/wGvAa0BqgH/Aa8BrQGq
-        Af8BrwGtAaoB/wGxAa8BrAH/AZsBlwGTAf8BLgEpASUB/xoAAUcB/wJsAbAB/wKQAcEB/wKOAb8B/wKO
-        Ab8B/wKOAb8B/wKOAb8B/wKQAcEB/wJsAbAB/wIAAUYB/xgAASsBGwEAAf8BKgEVAQAB/wEqARYBAAH/
-        ASoBFQEAAf8BKgEVAQAB/wEqARUBAAH/ASoBFQEAAf8BKgEWAQAB/wEqARUBAAH/ASwBGAEAAf8YAAEC
-        ASsBDgH/AQABKQEKAf8BAAEpAQgB/wEAASkBCAH/AQABKQEIAf8BAAEpAQgB/wEAASkBCAH/AQABKQEI
-        Af8BAAEpAQoB/wECASwBDgH/GAABKwEnASIB/wEqASYBIAH/ASoBJQEhAf8BKgElASAB/wEqASUBIAH/
-        ASoBJQEgAf8BKgElASAB/wEqASUBIQH/ASoBJgEgAf8BLAEoASQB/xoAAUEB/wIAAUIB/wIAAUIB/wIA
-        AUIB/wIAAUIB/wIAAUIB/wIAAUIB/wIAAUIB/wIAAUIB/wIAAUIB//8A/wD/AA8AAUIBTQE+BwABPgMA
+        AZcBhgH/AUsBRAE9Af8YAAESAREBaAH/AUcBSwHRAf8BSAFOAc4B/wFIAU4BzQH/AUgBTgHNAf8BSAFO
+        Ac0B/wFIAU4BzQH/AUgBTgHOAf8BRwFLAdEB/wESAREBaAH/GAABTQExAQwB/wGiAXEBMQH/AZ8BbgEv
+        Af8BmwFrASwB/wGbAWsBLAH/AZsBawEsAf8BmwFrASwB/wGfAW4BLwH/AaIBcQExAf8BTQExAQwB/xgA
+        AQ8BSwEgAf8BMgGfAVYB/wEwAZsBVAH/AS0BmQFRAf8BLQGZAVEB/wEtAZkBUQH/AS0BmQFRAf8BMAGb
+        AVQB/wEyAZ8BVgH/AQ8BSwEgAf8YAAFEAT4BNwH/AY0BhAFzAf8BigGBAXAB/wGHAXoBbQH/AYcBegFt
+        Af8BhwF6AW0B/wGHAXoBbQH/AYoBgQFwAf8BjQGEAXMB/wFEAT4BNwH/GAACDQFgAf8BNwE7AboB/wE0
+        ATgBtgH/ATABNQG0Af8BMAE1AbQB/wEwATUBtAH/ATABNQG0Af8BNAE4AbYB/wE3ATsBugH/Ag0BYAH/
+        GAABRAEpAQgB/wGfAXkBTQH/AaEBhAFWAf8BoAGCAVQB/wGfAYEBUwH/AZ8BgQFTAf8BoAGCAVQB/wGh
+        AYQBVgH/AZ8BeQFNAf8BRAErAQgB/xgAAQkBQgEZAf8BTwGdAWYB/wFYAZ8BbgH/AVYBngFsAf8BVAGd
+        AWsB/wFUAZ0BawH/AVYBngFsAf8BWAGfAW4B/wFPAZ0BZgH/AQkBQgEZAf8YAAE9ATgBMgH/AZQBjgGD
+        Af8BlwGRAYkB/wGWAZABhwH/AZUBjwGGAf8BlQGPAYYB/wGWAZABhwH/AZcBkQGJAf8BlAGOAYMB/wE9
+        ATgBMgH/GAACBwFXAf8BTwFQAbYB/wFXAVkBtgH/AVYBVwG1Af8BVAFVAbUB/wFUAVUBtQH/AVYBVwG1
+        Af8BVwFZAbYB/wFPAVABtgH/AgYBWQH/GAABOgEiAQEB/wGlAY4BbgH/Aa4BmgGEAf8BrQGaAYIB/wGt
+        AZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGuAZoBhAH/AaUBjgFuAf8BOgEhAQMB/xgAAQQBOAESAf8BbgGk
+        AYEB/wGFAa0BkAH/AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYMBrAGPAf8BhQGtAZAB/wFvAaQBgQH/
+        AQQBOQESAf8YAAE2ATABKwH/AaABmwGVAf8BqgGmAaIB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaEB/wGq
+        AaYBoQH/AaoBpgGiAf8BoAGbAZUB/wE2ATABKwH/GgABTwH/AmsBuAH/AoIBvwH/AoABvgH/AoABvgH/
+        AoABvgH/AoABvgH/AoIBvwH/AmsBuAH/AgABUAH/GAABLgEaAQAB/wGcAYsBcQH/AbABpQGUAf8BrwGj
+        AZIB/wGvAaMBkgH/Aa8BowGSAf8BrwGjAZIB/wGwAaUBlAH/AZwBigFxAf8BLwEbAQAB/xkAAS0BDAH/
+        AXIBmwGAAf8BlQGxAZ0B/wGTAa8BmwH/AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZUBsQGdAf8BcAGb
+        AYAB/wEAAS4BDAH/GAABLAEoASQB/wGbAZcBkwH/AbEBrwGsAf8BrwGtAaoB/wGvAa0BqgH/Aa8BrQGq
+        Af8BrwGtAaoB/wGxAa8BrAH/AZsBlwGTAf8BLQEoASQB/xoAAUYB/wJrAbAB/wKQAcEB/wKOAb8B/wKO
+        Ab8B/wKOAb8B/wKOAb8B/wKQAcEB/wJrAbAB/wIAAUUB/xgAASoBGgEAAf8BKQEUAQAB/wEpARUBAAH/
+        ASkBFAEAAf8BKQEUAQAB/wEpARQBAAH/ASkBFAEAAf8BKQEVAQAB/wEpARQBAAH/ASsBFwEAAf8YAAEB
+        ASoBDQH/AQABKAEJAf8BAAEoAQcB/wEAASgBBwH/AQABKAEHAf8BAAEoAQcB/wEAASgBBwH/AQABKAEH
+        Af8BAAEoAQkB/wEBASsBDQH/GAABKgEmASEB/wEpASUBHwH/ASkBJAEgAf8BKQEkAR8B/wEpASQBHwH/
+        ASkBJAEfAf8BKQEkAR8B/wEpASQBIAH/ASkBJQEfAf8BKwEnASMB/xoAAUAB/wIAAUEB/wIAAUEB/wIA
+        AUEB/wIAAUEB/wIAAUEB/wIAAUEB/wIAAUEB/wIAAUEB/wIAAUEB//8A/wD/AA8AAUIBTQE+BwABPgMA
         ASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/8BAAL/BgAC/wYAAv8GAAHgAQcGAAHgAQcGAAHgAQcGAAHg
         AQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAL/BgAC/wYAAv8GABj/AeABBwHg
         AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
@@ -307,25 +307,9 @@
   <metadata name="LoadinngCircleTimeout.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>658, 17</value>
   </metadata>
-  <data name="programsControl1.CurrentGame" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAER4MzYwY2UuRW5naW5lLCBWZXJzaW9uPTEuMC4wLjAsIEN1bHR1
-        cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49bnVsbAwDAAAAVVN5c3RlbS5EYXRhLkVudGl0eSwgVmVy
-        c2lvbj00LjAuMC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUw
-        ODkFAQAAABd4MzYwY2UuRW5naW5lLkRhdGEuR2FtZQ8AAAAHX0dhbWVJZAxfRGlza0RyaXZlSWQJX0Zp
-        bGVOYW1lEF9GaWxlUHJvZHVjdE5hbWUMX0ZpbGVWZXJzaW9uCV9GdWxsUGF0aAxfQ29tcGFueU5hbWUJ
-        X0hvb2tNYXNrC19YSW5wdXRNYXNrCF9Db21tZW50Cl9Jc0VuYWJsZWQMX0RhdGVDcmVhdGVkDF9EYXRl
-        VXBkYXRlZBtFbnRpdHlPYmplY3QrX3JlbGF0aW9uc2hpcHMXRW50aXR5T2JqZWN0K19lbnRpdHlLZXkD
-        AwEBAQEBAAABAAADBAQLU3lzdGVtLkd1aWQLU3lzdGVtLkd1aWQICAEND1N5c3RlbS5EYXRlVGltZTNT
-        eXN0ZW0uRGF0YS5PYmplY3RzLkRhdGFDbGFzc2VzLlJlbGF0aW9uc2hpcE1hbmFnZXIDAAAAFVN5c3Rl
-        bS5EYXRhLkVudGl0eUtleQMAAAACAAAABPz///8LU3lzdGVtLkd1aWQLAAAAAl9hAl9iAl9jAl9kAl9l
-        Al9mAl9nAl9oAl9pAl9qAl9rAAAAAAAAAAAAAAAIBwcCAgICAgICAsEpTwMzMJ5En9AU2vyhNqEB+///
-        //z///+DGyg8Cw2u530sJ/PeXdszBgYAAAAKZGV2ZW52LmV4ZQYHAAAAIE1pY3Jvc29mdMKuIFZpc3Vh
-        bCBTdHVkaW/CriAyMDEzBggAAAAMMTIuMC4zMDcyMy4wBgkAAABKQzpcUHJvZ3JhbSBGaWxlcyAoeDg2
-        KVxNaWNyb3NvZnQgVmlzdWFsIFN0dWRpbyAxMi4wXENvbW1vbjdcSURFXGRldmVudi5leGUGCgAAABVN
-        aWNyb3NvZnQgQ29ycG9yYXRpb24AAAAAAAAAAAYLAAAAAAEbbgNIg7vRiAgNG24DSIO70YgKCgs=
-</value>
-  </data>
+  <metadata name="ToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>868, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAA8AAAAQAAEABADoTgAA9gAAADAwEAABAAQAaAYAAN5PAAAgIBAAAQAEAOgCAABGVgAAGBgQAAEA
