--- a/x360ce.App/Documents/ChangeLog.txt
+++ b/x360ce.App/Documents/ChangeLog.txt
@@ -1,4 +1,7 @@
-﻿v3.0.1.0 (2015-04-14)
+﻿v3.0.1.2 (2015-04-18)
+- Fix: Fixed issue with recording and reporting of Sliders.
+
+v3.0.1.0 (2015-04-14)
 - Update: A lot of changes, fixes and new bugs.
 
 v2.1.3.203 (2014-11-01)
