--- a/x360ce.App/Documents/ChangeLog.txt
+++ b/x360ce.App/Documents/ChangeLog.txt
@@ -1,4 +1,12 @@
-﻿v3.0.1.8 (2015-04-19)
+﻿v3.0.2.14 (2015-04-23)
+- Fix: Crash when generating Unique Disk ID hash.
+- New: More help will be displayed in yellow toolbar.
+- New: Support for new settings added.
+- Update: "Apply Preset" renamed "Click Here to Apply Preset" to make button function more recognizable.
+- Update: Updated to xinput1_3.dll v3.4.1.1181.
+- Update: Default settings games database updated.
+
+v3.0.1.8 (2015-04-19)
 - Fix: Force feedback PeriodicSine crash fix.
 - Fix: Issue with Axis on 64-bit platform.
 - Fix: Issue with negative axis not working.
