--- a/x360ce.App/Documents/ChangeLog.txt
+++ b/x360ce.App/Documents/ChangeLog.txt
@@ -1,7 +1,8 @@
-﻿v3.0.2.16 (2015-04-26)
+﻿v3.0.2.17 (2015-04-26)
 - Fix: Crash when generating Unique Disk ID hash.
 - Fix: Crash when x360ce.xml settings file is corrupted.
 - Fix: Crash when PeriodicSine force feedback is enabled.
+- Fix: Map button to axis not working.
 - New: More help will be displayed in yellow toolbar.
 - New: Support for new settings added.
 - Update: "Apply Preset" renamed "Click Here to Apply Preset" to make button function more recognizable.
