Multiple force feedback fixes. Force effect reset during updates fixed. This bug in PeriodicSine resulted in spinning wheel in one direction, instead of shaking. Implemented support for Left/Right magnitude parameters. Fixed Overall Strength not working. Fixed issues with values having wrong ranges. Force feedback now control left and right motor separately. Force feedback combines effects only if device have one motor available now.

--- a/x360ce.App/Documents/ChangeLog.txt
+++ b/x360ce.App/Documents/ChangeLog.txt
@@ -1,4 +1,8 @@
-﻿v3.0.2.19 (2015-04-26)
+﻿v3.0.2.21 (2015-04-28)
+- Fix: Force feedback controls fixed.
+- Update: Updated to xinput1_3.dll v3.4.1.1239.
+
+v3.0.2.19 (2015-04-26)
 - Fix: Left/Right force feedback motor stregth trackbars fixed.
 - New: Confirmation dialog for clear and reset controller settings.
 
