Force feedback motor swap fixed.

--- a/x360ce.App/Documents/ChangeLog.txt
+++ b/x360ce.App/Documents/ChangeLog.txt
@@ -1,4 +1,8 @@
-﻿v3.0.2.21 (2015-04-28)
+﻿v3.0.2.24 (2015-04-30)
+- New: Force effect direction support added.
+- Update: Updated to xinput1_3.dll v3.4.1.1244.
+
+v3.0.2.21 (2015-04-28)
 - Fix: Force feedback controls fixed.
 - Update: Updated to xinput1_3.dll v3.4.1.1239.
 
