Controls to configure axis to button dead-zone added (functionality is not added yet).

--- a/x360ce.App/MainForm.resx
+++ b/x360ce.App/MainForm.resx
@@ -118,90 +118,90 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="BuletImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>527, 17</value>
+    <value>247, 17</value>
   </metadata>
   <data name="BuletImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAA
-        EQAAAk1TRnQBSQFMAgEBBQEAARgBAAEYAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/ACEAARoBXwFyAf8BIwFqAYIB/wEmAXEBiQH/ASUBbwGIAf8BJQFv
-        AYgB/wElAW8BiAH/ASUBbwGIAf8BJgFxAYkB/wEjAWoBggH/ARoBYAFzAf/YAAEeAWUBegH/AXgB5wL/
-        AYYB7wL/AYUB7gL/AYUB7gL/AYUB7gL/AYUB7gL/AYYB7wL/AXcB6AL/AR4BZQF6Af/YAAEdAWQBeQH/
-        AWsB5wH+Af8BdAHqAfwB/wFzAekB+wH/AXMB6QH7Af8BcwHpAfsB/wFzAekB+wH/AXQB6gH8Af8BawHn
-        Af4B/wEdAWQBeQH/2AABGQFdAXAB/wFbAc4B5gH/AV8B0AHiAf8BXgHPAeIB/wFeAc8B4gH/AV4BzwHi
-        Af8BXgHPAeIB/wFfAdAB4gH/AVoBzwHmAf8BFwFdAXAB/9gAARIBVQFpAf8BSAG4AdEB/wFJAbgBzgH/
-        AUkBtwHNAf8BSQG3Ac0B/wFJAbcBzQH/AUkBtwHNAf8BSQG4Ac4B/wFIAbgB0QH/ARIBVQFpAf/YAAEO
-        AU8BYQH/ATgBogG6Af8BNQGeAbYB/wExAZ0BtAH/ATEBnQG0Af8BMQGdAbQB/wExAZ0BtAH/ATUBngG2
-        Af8BOAGiAboB/wEOAU8BYQH/2AABCAFGAVgB/wFQAaIBtgH/AVgBpAG2Af8BVwGiAbUB/wFVAaIBtQH/
-        AVUBogG1Af8BVwGiAbUB/wFYAaQBtgH/AVABogG2Af8BBwFIAVoB/9kAAT4BUAH/AWwBqAG4Af8BggGy
-        Ab8B/wGAAbABvgH/AYABsAG+Af8BgAGwAb4B/wGAAbABvgH/AYIBsgG/Af8BbAGoAbgB/wEAAT8BUQH/
-        2QABNwFHAf8BbAGiAbAB/wGQAbYBwQH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AY4BtAG/Af8BkAG2
-        AcEB/wFsAaIBsAH/AQABNgFGAf/ZAAEyAUEB/wEAATMBQgH/AQABMwFCAf8BAAEzAUIB/wEAATMBQgH/
-        AQABMwFCAf8BAAEzAUIB/wEAATMBQgH/AQABMwFCAf8BAAEzAUIB//8A/wD/AP8A/wD/AN4AAWIBQwEU
-        Af8BcQFLARkB/wF3AVABGwH/AXcBTwEbAf8BdwFPARsB/wF3AU8BGwH/AXcBTwEbAf8BdwFQARsB/wFx
-        AUsBGQH/AWMBQwEUAf8YAAEYAWABLAH/AR0BbwEzAf8BHwF0ATUB/wEeAXQBNQH/AR4BdAE1Af8BHgF0
-        ATUB/wEeAXQBNQH/AR8BdAE1Af8BHQFvATMB/wEYAWEBLAH/GAABVAFOAUUB/wFdAVYBTQH/AWMBXAFS
-        Af8BYwFcAVIB/wFjAVwBUgH/AWMBXAFSAf8BYwFcAVIB/wFjAVwBUgH/AV0BVgFNAf8BVAFOAUUB/xgA
-        AhoBcgH/ASQBIwGCAf8CJgGJAf8BJgElAYgB/wEmASUBiAH/ASYBJQGIAf8BJgElAYgB/wImAYkB/wEk
-        ASMBggH/AhoBcwH/GAABagFHARcC/wHCAWAC/wHKAXEB/wH+AckBcAH/Af4ByQFwAf8B/gHJAXAB/wH+
-        AckBcAL/AcoBcQL/AcEBYAH/AWsBRwEXAf8YAAEbAWgBLwH/AWMB/wGaAf8BcAH/AasB/wFuAf8BqgH/
-        AW4B/wGqAf8BbgH/AaoB/wFuAf8BqgH/AXAB/wGrAf8BYwH/AZoB/wEbAWgBMQH/GAABWQFTAUoB/wHb
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD8
+        EAAAAk1TRnQBSQFMAgEBBQEAAUgBAAFIAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8A/wD/ACEAARQBWQFsAf8BHQFkAYIB/wEgAWsBiQH/AR8BaQGIAf8BHwFp
+        AYgB/wEfAWkBiAH/AR8BaQGIAf8BIAFrAYkB/wEdAWQBggH/ARQBWgFtAf/YAAEYAV8BdAH/AXIB5wL/
+        AYYB7wL/AYUB7gL/AYUB7gL/AYUB7gL/AYUB7gL/AYYB7wL/AXEB6AL/ARgBXwF0Af/YAAEXAV4BcwH/
+        AWUB5wH+Af8BbgHqAfwB/wFtAekB+wH/AW0B6QH7Af8BbQHpAfsB/wFtAekB+wH/AW4B6gH8Af8BZQHn
+        Af4B/wEXAV4BcwH/2AABEwFXAWoB/wFVAc4B5gH/AVkB0AHiAf8BWAHPAeIB/wFYAc8B4gH/AVgBzwHi
+        Af8BWAHPAeIB/wFZAdAB4gH/AVQBzwHmAf8BEQFXAWoB/9gAAQwBTwFjAf8BQgG4AdEB/wFDAbgBzgH/
+        AUMBtwHNAf8BQwG3Ac0B/wFDAbcBzQH/AUMBtwHNAf8BQwG4Ac4B/wFCAbgB0QH/AQwBTwFjAf/YAAEI
+        AUkBWwH/ATIBogG6Af8BLwGeAbYB/wErAZ0BtAH/ASsBnQG0Af8BKwGdAbQB/wErAZ0BtAH/AS8BngG2
+        Af8BMgGiAboB/wEIAUkBWwH/2AABAgFAAVIB/wFKAaIBtgH/AVIBpAG2Af8BUQGiAbUB/wFPAaIBtQH/
+        AU8BogG1Af8BUQGiAbUB/wFSAaQBtgH/AUoBogG2Af8BAQFCAVQB/9kAATgBSgH/AWYBqAG4Af8BggGy
+        Ab8B/wGAAbABvgH/AYABsAG+Af8BgAGwAb4B/wGAAbABvgH/AYIBsgG/Af8BZgGoAbgB/wEAATkBSwH/
+        2QABMQFBAf8BZgGiAbAB/wGQAbYBwQH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AY4BtAG/Af8BkAG2
+        AcEB/wFmAaIBsAH/AQABMAFAAf/ZAAEsATsB/wEAAS0BPAH/AQABLQE8Af8BAAEtATwB/wEAAS0BPAH/
+        AQABLQE8Af8BAAEtATwB/wEAAS0BPAH/AQABLQE8Af8BAAEtATwB//8A/wD/AP8A/wD/AN4AAVwBPQEO
+        Af8BawFFARMB/wFxAUoBFQH/AXEBSQEVAf8BcQFJARUB/wFxAUkBFQH/AXEBSQEVAf8BcQFKARUB/wFr
+        AUUBEwH/AV0BPQEOAf8YAAESAVoBJgH/ARcBaQEtAf8BGQFuAS8B/wEYAW4BLwH/ARgBbgEvAf8BGAFu
+        AS8B/wEYAW4BLwH/ARkBbgEvAf8BFwFpAS0B/wESAVsBJgH/GAABTgFIAT8B/wFXAVABRwH/AV0BVgFM
+        Af8BXQFWAUwB/wFdAVYBTAH/AV0BVgFMAf8BXQFWAUwB/wFdAVYBTAH/AVcBUAFHAf8BTgFIAT8B/xgA
+        AhQBbAH/AR4BHQGCAf8CIAGJAf8BIAEfAYgB/wEgAR8BiAH/ASABHwGIAf8BIAEfAYgB/wIgAYkB/wEe
+        AR0BggH/AhQBbQH/GAABZAFBAREC/wHCAVoC/wHKAWsB/wH+AckBagH/Af4ByQFqAf8B/gHJAWoB/wH+
+        AckBagL/AcoBawL/AcEBWgH/AWUBQQERAf8YAAEVAWIBKQH/AV0B/wGaAf8BagH/AasB/wFoAf8BqgH/
+        AWgB/wGqAf8BaAH/AaoB/wFoAf8BqgH/AWoB/wGrAf8BXQH/AZoB/wEVAWIBKwH/GAABUwFNAUQB/wHb
         Ac8BtgH/AeEB1gG7Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHhAdYBuwH/AdsBzgG2
-        Af8BWQFSAUkB/xgAAR8BHgF6Af8BeAGAAv8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGR
-        Av8BdwGAAv8BHwEeAXoB/xgAAWkBRgEXAf8B7wGxAVsB/wHtAbgBaQH/AewBtwFoAf8B7AG3AWgB/wHs
-        AbcBaAH/AewBtwFoAf8B7QG4AWkB/wHvAbEBWwH/AWkBRQEXAf8YAAEZAWYBLgH/AVsB6QGRAf8BZgHm
-        AZwB/wFlAeUBmwH/AWUB5QGbAf8BZQHlAZsB/wFlAeUBmwH/AWYB5gGcAf8BWwHpAZEB/wEZAWYBLgH/
-        GAABWAFSAUkB/wHJAb0BqAH/Ac0BwgGrAf8BzAHAAaoB/wHMAcABqgH/AcwBwAGqAf8BzAHAAaoB/wHN
-        AcIBqwH/AckBvQGoAf8BWAFSAUkB/xgAAR4BHQF5Af8BawF0Af4B/wF0AYIB/AH/AXMBgQH7Af8BcwGB
-        AfsB/wFzAYEB+wH/AXMBgQH7Af8BdAGCAfwB/wFrAXQB/gH/AR4BHQF5Af8YAAFgAT8BFAH/AdQBnQFP
-        Af8B0QGgAVcB/wHRAZ8BVQH/AdEBnwFVAf8B0QGfAVUB/wHRAZ8BVQH/AdEBoAFXAf8B1AGdAU8B/wFg
-        AT8BEgH/GAABFwFdASgB/wFOAdEBewH/AVQBzwGEAf8BUwHOAYMB/wFTAc4BgwH/AVMBzgGDAf8BUwHO
-        AYMB/wFUAc8BhAH/AU4B0QF7Af8BFwFdASgB/xgAAVIBTAFDAf8BtQGsAZcB/wG1Aa0BmQH/AbUBrAGY
-        Af8BtQGsAZgB/wG1AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1AawBlwH/AVIBSwFDAf8YAAIZAXAB/wFb
-        AWEB5gH/AV8BaQHiAf8BXgFnAeIB/wFeAWcB4gH/AV4BZwHiAf8BXgFnAeIB/wFfAWkB4gH/AVoBYQHm
-        Af8CFwFwAf8YAAFXATgBEAH/AbsBhwE+Af8BugGHAUEB/wG5AYcBQQH/AbkBhwFBAf8BuQGHAUEB/wG5
-        AYcBQQH/AboBhwFBAf8BuwGHAT4B/wFXATgBEAH/GAABEwFVASYB/wE+AbcBaAH/AUEBtAFqAf8BQQG0
-        AWoB/wFBAbQBagH/AUEBtAFqAf8BQQG0AWoB/wFBAbQBagH/AT4BtwFoAf8BEwFVASYB/xgAAUwBRQE+
+        Af8BUwFMAUMB/xgAARkBGAF0Af8BcgGAAv8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGR
+        Av8BcQGAAv8BGQEYAXQB/xgAAWMBQAERAf8B7wGxAVUB/wHtAbgBYwH/AewBtwFiAf8B7AG3AWIB/wHs
+        AbcBYgH/AewBtwFiAf8B7QG4AWMB/wHvAbEBVQH/AWMBPwERAf8YAAETAWABKAH/AVUB6QGRAf8BYAHm
+        AZwB/wFfAeUBmwH/AV8B5QGbAf8BXwHlAZsB/wFfAeUBmwH/AWAB5gGcAf8BVQHpAZEB/wETAWABKAH/
+        GAABUgFMAUMB/wHJAb0BqAH/Ac0BwgGrAf8BzAHAAaoB/wHMAcABqgH/AcwBwAGqAf8BzAHAAaoB/wHN
+        AcIBqwH/AckBvQGoAf8BUgFMAUMB/xgAARgBFwFzAf8BZQFuAf4B/wFuAYIB/AH/AW0BgQH7Af8BbQGB
+        AfsB/wFtAYEB+wH/AW0BgQH7Af8BbgGCAfwB/wFlAW4B/gH/ARgBFwFzAf8YAAFaATkBDgH/AdQBnQFJ
+        Af8B0QGgAVEB/wHRAZ8BTwH/AdEBnwFPAf8B0QGfAU8B/wHRAZ8BTwH/AdEBoAFRAf8B1AGdAUkB/wFa
+        ATkBDAH/GAABEQFXASIB/wFIAdEBdQH/AU4BzwGEAf8BTQHOAYMB/wFNAc4BgwH/AU0BzgGDAf8BTQHO
+        AYMB/wFOAc8BhAH/AUgB0QF1Af8BEQFXASIB/xgAAUwBRgE9Af8BtQGsAZcB/wG1Aa0BmQH/AbUBrAGY
+        Af8BtQGsAZgB/wG1AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1AawBlwH/AUwBRQE9Af8YAAITAWoB/wFV
+        AVsB5gH/AVkBYwHiAf8BWAFhAeIB/wFYAWEB4gH/AVgBYQHiAf8BWAFhAeIB/wFZAWMB4gH/AVQBWwHm
+        Af8CEQFqAf8YAAFRATIBCgH/AbsBhwE4Af8BugGHATsB/wG5AYcBOwH/AbkBhwE7Af8BuQGHATsB/wG5
+        AYcBOwH/AboBhwE7Af8BuwGHATgB/wFRATIBCgH/GAABDQFPASAB/wE4AbcBYgH/ATsBtAFkAf8BOwG0
+        AWQB/wE7AbQBZAH/ATsBtAFkAf8BOwG0AWQB/wE7AbQBZAH/ATgBtwFiAf8BDQFPASAB/xgAAUYBPwE4
         Af8BoQGXAYYB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGh
-        AZcBhgH/AUwBRQE+Af8YAAETARIBaQH/AUgBTAHRAf8BSQFPAc4B/wFJAU8BzQH/AUkBTwHNAf8BSQFP
-        Ac0B/wFJAU8BzQH/AUkBTwHOAf8BSAFMAdEB/wETARIBaQH/GAABTgEyAQ0B/wGiAXIBMgH/AZ8BbwEw
-        Af8BmwFsAS0B/wGbAWwBLQH/AZsBbAEtAf8BmwFsAS0B/wGfAW8BMAH/AaIBcgEyAf8BTgEyAQ0B/xgA
-        ARABTAEhAf8BMwGfAVcB/wExAZsBVQH/AS4BmQFSAf8BLgGZAVIB/wEuAZkBUgH/AS4BmQFSAf8BMQGb
-        AVUB/wEzAZ8BVwH/ARABTAEhAf8YAAFFAT8BOAH/AY0BhAF0Af8BigGBAXEB/wGHAXsBbgH/AYcBewFu
-        Af8BhwF7AW4B/wGHAXsBbgH/AYoBgQFxAf8BjQGEAXQB/wFFAT8BOAH/GAACDgFhAf8BOAE8AboB/wE1
-        ATkBtgH/ATEBNgG0Af8BMQE2AbQB/wExATYBtAH/ATEBNgG0Af8BNQE5AbYB/wE4ATwBugH/Ag4BYQH/
-        GAABRQEqAQkB/wGfAXoBTgH/AaEBhAFXAf8BoAGCAVUB/wGfAYEBVAH/AZ8BgQFUAf8BoAGCAVUB/wGh
-        AYQBVwH/AZ8BegFOAf8BRQEsAQkB/xgAAQoBQwEaAf8BUAGdAWcB/wFZAZ8BbwH/AVcBngFtAf8BVQGd
-        AWwB/wFVAZ0BbAH/AVcBngFtAf8BWQGfAW8B/wFQAZ0BZwH/AQoBQwEaAf8YAAE+ATkBMwH/AZQBjgGD
-        Af8BlwGRAYkB/wGWAZABhwH/AZUBjwGGAf8BlQGPAYYB/wGWAZABhwH/AZcBkQGJAf8BlAGOAYMB/wE+
-        ATkBMwH/GAACCAFYAf8BUAFRAbYB/wFYAVoBtgH/AVcBWAG1Af8BVQFWAbUB/wFVAVYBtQH/AVcBWAG1
-        Af8BWAFaAbYB/wFQAVEBtgH/AgcBWgH/GAABOwEjAQIB/wGlAY4BbwH/Aa4BmgGEAf8BrQGaAYIB/wGt
-        AZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGuAZoBhAH/AaUBjgFvAf8BOwEiAQQB/xgAAQUBOQETAf8BbwGk
-        AYEB/wGFAa0BkAH/AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYMBrAGPAf8BhQGtAZAB/wFwAaQBgQH/
-        AQUBOgETAf8YAAE3ATEBLAH/AaABmwGVAf8BqgGmAaIB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaEB/wGq
-        AaYBoQH/AaoBpgGiAf8BoAGbAZUB/wE3ATEBLAH/GgABUAH/AmwBuAH/AoIBvwH/AoABvgH/AoABvgH/
-        AoABvgH/AoABvgH/AoIBvwH/AmwBuAH/AgABUQH/GAABLwEbAQAB/wGcAYsBcgH/AbABpQGUAf8BrwGj
-        AZIB/wGvAaMBkgH/Aa8BowGSAf8BrwGjAZIB/wGwAaUBlAH/AZwBigFyAf8BMAEcAQAB/xkAAS4BDQH/
-        AXMBmwGAAf8BlQGxAZ0B/wGTAa8BmwH/AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZUBsQGdAf8BcQGb
-        AYAB/wEAAS8BDQH/GAABLQEpASUB/wGbAZcBkwH/AbEBrwGsAf8BrwGtAaoB/wGvAa0BqgH/Aa8BrQGq
-        Af8BrwGtAaoB/wGxAa8BrAH/AZsBlwGTAf8BLgEpASUB/xoAAUcB/wJsAbAB/wKQAcEB/wKOAb8B/wKO
-        Ab8B/wKOAb8B/wKOAb8B/wKQAcEB/wJsAbAB/wIAAUYB/xgAASsBGwEAAf8BKgEVAQAB/wEqARYBAAH/
-        ASoBFQEAAf8BKgEVAQAB/wEqARUBAAH/ASoBFQEAAf8BKgEWAQAB/wEqARUBAAH/ASwBGAEAAf8YAAEC
-        ASsBDgH/AQABKQEKAf8BAAEpAQgB/wEAASkBCAH/AQABKQEIAf8BAAEpAQgB/wEAASkBCAH/AQABKQEI
-        Af8BAAEpAQoB/wECASwBDgH/GAABKwEnASIB/wEqASYBIAH/ASoBJQEhAf8BKgElASAB/wEqASUBIAH/
-        ASoBJQEgAf8BKgElASAB/wEqASUBIQH/ASoBJgEgAf8BLAEoASQB/xoAAUEB/wIAAUIB/wIAAUIB/wIA
-        AUIB/wIAAUIB/wIAAUIB/wIAAUIB/wIAAUIB/wIAAUIB/wIAAUIB//8A/wD/AA8AAUIBTQE+BwABPgMA
-        ASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/8BAAL/BgAC/wYAAv8GAAHgAQcGAAHgAQcGAAHgAQcGAAHg
-        AQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAL/BgAC/wYAAv8GABj/AeABBwHg
+        AZcBhgH/AUYBPwE4Af8YAAENAQwBYwH/AUIBRgHRAf8BQwFJAc4B/wFDAUkBzQH/AUMBSQHNAf8BQwFJ
+        Ac0B/wFDAUkBzQH/AUMBSQHOAf8BQgFGAdEB/wENAQwBYwH/GAABSAEsAQcB/wGiAWwBLAH/AZ8BaQEq
+        Af8BmwFmAScB/wGbAWYBJwH/AZsBZgEnAf8BmwFmAScB/wGfAWkBKgH/AaIBbAEsAf8BSAEsAQcB/xgA
+        AQoBRgEbAf8BLQGfAVEB/wErAZsBTwH/ASgBmQFMAf8BKAGZAUwB/wEoAZkBTAH/ASgBmQFMAf8BKwGb
+        AU8B/wEtAZ8BUQH/AQoBRgEbAf8YAAE/ATkBMgH/AY0BhAFuAf8BigGBAWsB/wGHAXUBaAH/AYcBdQFo
+        Af8BhwF1AWgB/wGHAXUBaAH/AYoBgQFrAf8BjQGEAW4B/wE/ATkBMgH/GAACCAFbAf8BMgE2AboB/wEv
+        ATMBtgH/ASsBMAG0Af8BKwEwAbQB/wErATABtAH/ASsBMAG0Af8BLwEzAbYB/wEyATYBugH/AggBWwH/
+        GAABPwEkAQMB/wGfAXQBSAH/AaEBhAFRAf8BoAGCAU8B/wGfAYEBTgH/AZ8BgQFOAf8BoAGCAU8B/wGh
+        AYQBUQH/AZ8BdAFIAf8BPwEmAQMB/xgAAQQBPQEUAf8BSgGdAWEB/wFTAZ8BaQH/AVEBngFnAf8BTwGd
+        AWYB/wFPAZ0BZgH/AVEBngFnAf8BUwGfAWkB/wFKAZ0BYQH/AQQBPQEUAf8YAAE4ATMBLQH/AZQBjgGD
+        Af8BlwGRAYkB/wGWAZABhwH/AZUBjwGGAf8BlQGPAYYB/wGWAZABhwH/AZcBkQGJAf8BlAGOAYMB/wE4
+        ATMBLQH/GAACAgFSAf8BSgFLAbYB/wFSAVQBtgH/AVEBUgG1Af8BTwFQAbUB/wFPAVABtQH/AVEBUgG1
+        Af8BUgFUAbYB/wFKAUsBtgH/AgEBVAH/GAABNQEdAQAB/wGlAY4BaQH/Aa4BmgGEAf8BrQGaAYIB/wGt
+        AZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGuAZoBhAH/AaUBjgFpAf8BNQEcAQAB/xkAATMBDQH/AWkBpAGB
+        Af8BhQGtAZAB/wGDAawBjwH/AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYUBrQGQAf8BagGkAYEB/wEA
+        ATQBDQH/GAABMQErASYB/wGgAZsBlQH/AaoBpgGiAf8BqgGmAaEB/wGqAaYBoQH/AaoBpgGhAf8BqgGm
+        AaEB/wGqAaYBogH/AaABmwGVAf8BMQErASYB/xoAAUoB/wJmAbgB/wKCAb8B/wKAAb4B/wKAAb4B/wKA
+        Ab4B/wKAAb4B/wKCAb8B/wJmAbgB/wIAAUsB/xgAASkBFQEAAf8BnAGLAWwB/wGwAaUBlAH/Aa8BowGS
+        Af8BrwGjAZIB/wGvAaMBkgH/Aa8BowGSAf8BsAGlAZQB/wGcAYoBbAH/ASoBFgEAAf8ZAAEoAQcB/wFt
+        AZsBgAH/AZUBsQGdAf8BkwGvAZsB/wGTAa8BmwH/AZMBrwGbAf8BkwGvAZsB/wGVAbEBnQH/AWsBmwGA
+        Af8BAAEpAQcB/xgAAScBIwEfAf8BmwGXAZMB/wGxAa8BrAH/Aa8BrQGqAf8BrwGtAaoB/wGvAa0BqgH/
+        Aa8BrQGqAf8BsQGvAawB/wGbAZcBkwH/ASgBIwEfAf8aAAFBAf8CZgGwAf8CkAHBAf8CjgG/Af8CjgG/
+        Af8CjgG/Af8CjgG/Af8CkAHBAf8CZgGwAf8CAAFAAf8YAAElARUBAAH/ASQBDwEAAf8BJAEQAQAB/wEk
+        AQ8BAAH/ASQBDwEAAf8BJAEPAQAB/wEkAQ8BAAH/ASQBEAEAAf8BJAEPAQAB/wEmARIBAAH/GQABJQEI
+        Af8BAAEjAQQB/wEAASMBAgH/AQABIwECAf8BAAEjAQIB/wEAASMBAgH/AQABIwECAf8BAAEjAQIB/wEA
+        ASMBBAH/AQABJgEIAf8YAAElASEBHAH/ASQBIAEaAf8BJAEfARsB/wEkAR8BGgH/ASQBHwEaAf8BJAEf
+        ARoB/wEkAR8BGgH/ASQBHwEbAf8BJAEgARoB/wEmASIBHgH/GgABOwH/AgABPAH/AgABPAH/AgABPAH/
+        AgABPAH/AgABPAH/AgABPAH/AgABPAH/AgABPAH/AgABPAH//wD/AP8ADwABQgFNAT4HAAE+AwABKAMA
+        AUADAAEgAwABAQEAAQEGAAEBFgAD/wEAAv8GAAL/BgAC/wYAAeABBwYAAeABBwYAAeABBwYAAeABBwYA
+        AeABBwYAAeABBwYAAeABBwYAAeABBwYAAeABBwYAAeABBwYAAv8GAAL/BgAC/wYAGP8B4AEHAeABBwHg
         AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
         AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
-        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBxj/Cw==
+        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHGP8L
 </value>
   </data>
   <metadata name="MainStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>411, 17</value>
+    <value>109, 17</value>
   </metadata>
   <data name="HelpBodyLabel.Text" xml:space="preserve">
     <value>Emulator will allow you to use Direct Input controllers in games which support XBOX 360 Controller or XInput controllers only by translating XInput calls to DirectInput calls. Close this application before starting the game.</value>
@@ -305,27 +305,11 @@
 </value>
   </data>
   <metadata name="LoadinngCircleTimeout.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>658, 17</value>
+    <value>378, 17</value>
   </metadata>
-  <data name="programsControl1.CurrentGame" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAER4MzYwY2UuRW5naW5lLCBWZXJzaW9uPTEuMC4wLjAsIEN1bHR1
-        cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49bnVsbAwDAAAAVVN5c3RlbS5EYXRhLkVudGl0eSwgVmVy
-        c2lvbj00LjAuMC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUw
-        ODkFAQAAABd4MzYwY2UuRW5naW5lLkRhdGEuR2FtZQ8AAAAHX0dhbWVJZAxfRGlza0RyaXZlSWQJX0Zp
-        bGVOYW1lEF9GaWxlUHJvZHVjdE5hbWUMX0ZpbGVWZXJzaW9uCV9GdWxsUGF0aAxfQ29tcGFueU5hbWUJ
-        X0hvb2tNYXNrC19YSW5wdXRNYXNrCF9Db21tZW50Cl9Jc0VuYWJsZWQMX0RhdGVDcmVhdGVkDF9EYXRl
-        VXBkYXRlZBtFbnRpdHlPYmplY3QrX3JlbGF0aW9uc2hpcHMXRW50aXR5T2JqZWN0K19lbnRpdHlLZXkD
-        AwEBAQEBAAABAAADBAQLU3lzdGVtLkd1aWQLU3lzdGVtLkd1aWQICAEND1N5c3RlbS5EYXRlVGltZTNT
-        eXN0ZW0uRGF0YS5PYmplY3RzLkRhdGFDbGFzc2VzLlJlbGF0aW9uc2hpcE1hbmFnZXIDAAAAFVN5c3Rl
-        bS5EYXRhLkVudGl0eUtleQMAAAACAAAABPz///8LU3lzdGVtLkd1aWQLAAAAAl9hAl9iAl9jAl9kAl9l
-        Al9mAl9nAl9oAl9pAl9qAl9rAAAAAAAAAAAAAAAIBwcCAgICAgICAsEpTwMzMJ5En9AU2vyhNqEB+///
-        //z///+DGyg8Cw2u530sJ/PeXdszBgYAAAAKZGV2ZW52LmV4ZQYHAAAAIE1pY3Jvc29mdMKuIFZpc3Vh
-        bCBTdHVkaW/CriAyMDEzBggAAAAMMTIuMC4zMDcyMy4wBgkAAABKQzpcUHJvZ3JhbSBGaWxlcyAoeDg2
-        KVxNaWNyb3NvZnQgVmlzdWFsIFN0dWRpbyAxMi4wXENvbW1vbjdcSURFXGRldmVudi5leGUGCgAAABVN
-        aWNyb3NvZnQgQ29ycG9yYXRpb24AAAAAAAAAAAYLAAAAAAEbbgNIg7vRiAgNG24DSIO70YgKCgs=
-</value>
-  </data>
+  <metadata name="ToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAA8AAAAQAAEABADoTgAA9gAAADAwEAABAAQAaAYAAN5PAAAgIBAAAQAEAOgCAABGVgAAGBgQAAEA
